src/objects/CventEvents__AttendeeStatusMapping__c.object
<CustomObject>
    <description>Represents mapping between Campaign Status and Attendee Statuses.</description>
    <fields>
        <fullName>CventEvents__AttendeeStatus__c</fullName>
        <label>Attendee Status</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Denied Approval</fullName>
                </value>
                <value>
                    <fullName>Invitation Not Sent</fullName>
                </value>
                <value>
                    <fullName>Invitation Pending</fullName>
                </value>
                <value>
                    <fullName>Nomination Pending</fullName>
                </value>
                <value>
                    <fullName>Nomination Approved</fullName>
                </value>
                <value>
                    <fullName>Nomination Denied</fullName>
                </value>
                <value>
                    <fullName>Nomination Cancelled</fullName>
                </value>
                <value>
                    <fullName>Substituted</fullName>
                </value>
                <value>
                    <fullName>Registration Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__CampaignMemberStatus__c</fullName>
        <label>Campaign Member Status</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Attendee Status Mappings</relationshipLabel>
        <relationshipName>AttendeeStatusMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee Status Mapping</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Campaign__c</columns>
        <columns>CventEvents__AttendeeStatus__c</columns>
        <columns>CventEvents__CampaignMemberStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASM-{00000000}</displayFormat>
        <label>Attendee Status Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Status Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>